# fungen-rewrite-multiagent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_STATUS.txt  CROSS_PLATFORM_COMPLETE.txt  INTEGRATION_COMPLETE.txt  INTEGRATION_REPORT.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TEST_DELIVERABLES.txt  TEST_STATISTICS.txt  TEST_SUITE_SUMMARY.md  TRACKER_DELIVERY_SUMMARY.md  VIDEO_SPECIALIST_SUMMARY.md  WORK_SUMMARY.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  verify_integration.py
core/: README.md  __init__.py  batch_processor.py  config.py  frame_buffer.py  model_manager.py  preprocessing.py  tensorrt_converter.py  video_processor.py  video_processor_optimized.py  vr_utils.py
docs/: CODE_QUALITY_QUICK_START.md  CODE_QUALITY_SUMMARY.md  MASTER_STATUS.md  ML_SPECIALIST_FINAL_REPORT.md  TRACKER_DEV_1_REPORT.md  agent_assignments.json  architecture.md  cross-platform-implementation.md  implementation_roadmap.md  keyboard_shortcuts.md  ml_implementation.md  optimization_strategies.md  project_architect_summary.md  requirements.md  requirements_index.md  requirements_summary.md  tracker_implementation.md  ui_architect_summary.md  ui_architecture.md  ui_enhancement_summary.md  ui_integration_guide.md  video_processing_guide.md
examples/: basic_video_decode.py  batch_video_processing.py  ml_usage_demo.py  preprocessing_example.py  tracker_example.py  ui_enhancement_demo.py
models/: .gitkeep
progress/: code-quality.json  cross-platform-dev.json  integration-master.json  master_status.json  ml-specialist.json  project-architect.json  requirements-analyst.json  test-engineer-1.json  test-engineer-2.json  tracker-dev-1.json  tracker-dev-2.json  ui-architect.json  ui-enhancer.json  video-specialist.json
tests/: QUICK_START.md  README.md  TEST_ENGINEER_2_SUMMARY.md  conftest.py  run_all_tests.py
tests/benchmarks/: BENCHMARK_REPORT.md  benchmark_tracker.py  results.json  test_fungen_comparison.py  test_model_inference.py  test_tracking_performance.py  test_video_decode_performance.py  tracker_benchmarks.py
tests/integration/: test_batch_processing.py  test_cross_platform.py  test_error_handling.py  test_full_pipeline.py
tests/unit/: debug_tracker.py  test_batch_processor.py  test_byte_tracker.py  test_conditional_imports.py  test_config.py  test_frame_buffer.py  test_improved_tracker.py  test_kalman_filter.py  test_model_manager.py  test_optical_flow.py  test_performance.py  test_platform_utils.py  test_preprocessing.py  test_runner.py  test_ui_components.py  test_ui_enhanced.py  test_video_processor.py
trackers/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base_tracker.py  byte_tracker.py  improved_tracker.py  kalman_filter.py  optical_flow.py
ui/: README.md  __init__.py  agent_dashboard.py  animations.py  event_handlers.py  main_window.py  settings_panel.py  themes.py  widgets.py
ui/components/: __init__.py  metric_display.py  progress_bar.py  status_bar.py  tooltip.py
utils/: README.md  __init__.py  conditional_imports.py  demo.py  performance.py  platform_utils.py
